- Be more eager to fork (tasks were entered uselessly in pool)

JoCaml 3.10.0:
----------------------
 First public release